--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -13,14 +13,14 @@ html {
   transition: background-color 0.3s, color 0.3s;
 }
 
-header {
+.custom-header {
+  background-image: url('../imagens/fundo_header.png');
   background-size: cover;
   background-position: center;
-  padding-top: 10px;
-  padding-bottom: 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  background-repeat: no-repeat;
+  height: 80vh;
+  width: 100%;
+  margin-bottom: 40px;
 }
 
 .header-main {
@@ -38,6 +38,13 @@ header {
   max-width: 800px;
   margin: 15px auto 0;
   color: #f8f9fa;
+}
+
+.text-shadow {
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  display: inline-block;
 }
 
 main {
@@ -143,6 +150,7 @@ body.cotacao-page header {
   height: auto;
   padding: 20px 0 40px 0;
   border-bottom: none;
+  margin-bottom: 40px;
 }
 
 body.cotacao-page .header-main h1 {
@@ -257,16 +265,34 @@ body.dark-theme header .btn#theme-toggle-btn {
   .flex-row-reverse {
     flex-direction: column;
   }
+
   .header-main h1 {
-    font-size: 2.2em;
+    font-size: 2em;
   }
+
+  .text-shadow {
+    background-color: rgba(0, 0, 0, 0.4);
+    padding: 0;
+  }
+
   .header-main p {
     font-size: 1em;
   }
+
   .footer-content {
     flex-direction: column;
     align-items: center;
     text-align: center;
+  }
+
+  .custom-header {
+    background-position: top;
+
+    height: 60vh;
+  }
+
+  .custom-header .display-4 {
+    font-size: 1.8rem;
   }
 }
 
